--- a/Notebooks/Week7/EMSC3033 - Week 7 - Practical Solution.ipynb
+++ b/Notebooks/Week7/EMSC3033 - Week 7 - Practical Solution.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finding the declination is a little more tricky because we have to ensure it resides in the correct quadrant. If we use `np.arctan`, we'll get an answer in the interval $[-\\pi/2,\\pi/2]$. However we know that the declination should be in the interval $[-\\pi/2,\\pi/2]$. To overcome this problem we use the `np.arctan2` function."
+    "Finding the declination is a little more tricky because we have to ensure it resides in the correct quadrant. If we use `np.arctan`, we'll get an answer in the interval $[-\\pi,\\pi]$. However we know that the declination should be in the interval $[-\\pi/2,\\pi/2]$. To overcome this problem we use the `np.arctan2` function."
    ]
   },
   {
@@ -305,7 +305,7 @@
     "\n",
     "Assuming that the Earth's magnetic field has a\n",
     "strength of 50,000 nT, calculate the total ($\\Delta B$), vertical ($\\Delta Z$), and horizontal ($\\Delta H$) anomalies for a monopole with a cross-sectional area of 0.5 m$^2$,\n",
-    "magnetic susceptibility ($\\kappa$) of 0.1 (no units) and depth ($Z_p$) of 5 m.\n",
+    "magnetic susceptibility ($\\kappa$) of 0.025 (no units) and depth ($Z_p$) of 5 m.\n",
     "\n",
     "Calculate the anomaly in 0.1 m steps from positions of $x$ = -15 m to\n",
     "$x$ = +15 m and for field inclinations of +45$^o$. You can assume that $x$ is aligned with the horizontal direction of Earth's magnetic field."
